# Banker-s-Algorithm

./: CMakeLists.txt  README.md  initArrays.c  main  main.c  main.h  makefile  parser.c  printFunctions.c  relResources.c  reqResources.c  safetyAlgorithm.c  threadRunner.c
